--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 </head>
 <body>
 
-</div>
+	<div class = "hem"> </div>
+	<div class = "meny"> </div>
+	<div class = "öppettider"> </div>
+	<div class = "omoss"> </div>
+	<div class = "kontakt"> </div>
+
 </body>
 </html>
